2005-02-02  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/smp-imps.h (imps_any_new_apics): Removed.
	(imps_enabled): Likewise.
	(imps_lapic_addr): Likewise.
	(imps_num_cpus): Likewise.
	(imps_cpu_apic_map): Likewise.
	(imps_apic_cpu_map): Likewise.

	* stage2/Makefile.am (libgrub_a_CFLAGS): Remove
	-fwritable-strings. Not required for the grub shell actually.

	* grub/Makefile.am (AM_CFLAGS): Likewise.

2005-02-01  Yoshinori K. Okuji  <okuji@enbug.org>

	* grub/asmstub.c (grub_stage2): Use auto instead of static for
	nested functions.

	* stage2/char_io.c (memcheck) [GRUB_UTIL]: Likewise.

	* stage2/builtins.c (blocklist_func): Likewise.
	(color_func): Likewise.
	(install_func): Likewise.
	(setkey_func): Likewise.

	* lib/device.c (read_device_map): Likewise.

2005-01-30  Yoshinori K. Okuji  <okuji@enbug.org>

        * configure.ac (AC_INIT): Upgraded to 0.96.

2004-10-11 Jason Thomas <jason@staff.pnc.com.au>

	Patch from Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
	* docs/kernel.c.texi (cmain): Incremement mod by one, instead of
	sizeof(module_t), since it's already a pointer of type module_t.
	* docs/kernel.c (cmain): Do the same.

2004-09-20  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/internals.texi (Internals): Changed to an appendix.

	* docs/grub.texi (@setchapternewpage): Changed to odd from off.
	(@contents): Moved to the beginning.
	(Future): Changed to an appendix.

2004-08-17  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/cmdline.c (run_script): Fix a reversed conditional.
	Reported by Alban Crequy <alban.crequy@apinc.org>.

2004-08-07  Jason Thomas  <jason@staff.pnc.com.au>
	
	From Michael Hohnbaum <hohnbaum@us.ibm.com>:
	* stage2/fsys_ext2fs.c (ext2fs_read): Handle sparse files.

2004-07-24  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/stage2.c (cmain): Terminate DEFAULT_FILE with NUL
	correctly. Reported by Alban Crequy <alban.crequy@apinc.org>.

2004-07-21  Robert Millan  <robertmh@gnu.org>

	Patch from David Weinehall <tao@debian.org>